# extrude

./: .gitignore  CMakeLists.txt  LICENSE  README.md  header_builds.c  init.c  loadpng-sapp.glsl.h  main.cpp  shader.glsl  shell.html  sokol.c
demo/: header_builds.c  header_builds_demo.c  main.cpp  shader.glsl.h
example/: input.h  main.cpp  shader.glsl.h
libs/: delaunator.cpp  hull_finder.cpp  hull_finder.h  poly_partition.cpp  poly_partition.h  polyline_simplification.cpp  polyline_simplification.h
src/: compare.cpp  compare.h  containers.cpp  containers.h  header_builds.c  image.cpp  image.h  image_filters.cpp  image_filters.h  imaging.cpp  imaging.h  imaging_compare.cpp  imaging_filter.cpp  mesh.cpp  mesh.h  mesh_extrude.cpp  random.cpp  random.h  string.cpp  string.h  vertex_data.cpp  vertex_data.h  vertex_data_extrude.cpp  vertex_data_smooth.cpp
src/types/: bitmap.cpp  bitmap.h  color.cpp  color.h  image.cpp  image.h  point.cpp  point.h  pointf.cpp  pointf.h  polygonf.cpp  polygonf.h  rect.cpp  rect.h  rectf.cpp  rectf.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
